# explosion_decals

./: CMakeLists.txt  LICENSE.txt  README.md
data/: room.blend  room.glb
libs/cgltf/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/imgui/: CMakeLists.txt  imconfig.h
libs/stb/: CMakeLists.txt
src/: main.cpp  utils.cpp  utils.hpp
